tests/chainsaw/restrict-image-registries/pod-quay-gs-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-quay-gs-registry
spec:
  containers:
  - name: app
    image: quay.io/giantswarm/helloworld:latest
  restartPolicy: Never
